# macropinna

./: .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json
src/: app.html
src-rc/: package-lock.json  package.json
src-rc/src/lib/: api.ts
src-rc/src/routes/: +layout.svelte  +page.svelte
src-remote/: package-lock.json  package.json  rc_clip_paths.py  svelte.config.js
src-remote/src/lib/: api.ts
src-remote/src/routes/: +layout.svelte  +page.svelte  Controller.svelte  DPad.svelte  Keyboard.svelte  Touchpad.svelte
src-remote/src/routes/ui/: Button.svelte  TextInput.svelte
src-tauri/: .gitignore  Cargo.toml  build.rs  config.json  tauri.conf.json
src-tauri/src/: audio_visualizer.rs  config.rs  config_listener.rs  launcher.rs  lib.rs  main.rs  media_player.rs  remote_server.rs  suggest_launchers.rs  weather.rs
src-tauri/src/api/: remote.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: default.json  mod.rs
src-tauri/src/remote_server/: input.rs  ip.rs  mod.rs
src-tauri/src/util/: mod.rs  numeric.rs  project_dirs.rs  service.rs
src/lib/: api.ts  config.ts  joystick.ts  layout.ts  themes.ts  util.ts
src/routes/: +layout.svelte  +page.svelte  KeyboardInput.svelte  Screen.svelte
src/routes/home/: Home.svelte  Widget.svelte
src/routes/home/widgets/: AudioVisualizer.svelte  Clock.svelte  EditButton.svelte  Player.svelte  Pomodoro.svelte  Todo.svelte  Weather.svelte  Yapper.svelte  widgetMath.ts
src/routes/home/widgets/pomodoro/: EditPomodoroModal.svelte  Pomodoro.svelte
src/routes/home/widgets/weather/: EditWeatherModal.svelte  Weather.svelte  Yapper.svelte  provider.ts
src/routes/launcher/: App.svelte  Launcher.svelte
src/routes/settings/: CodeInput.svelte  General.svelte  NavBox.svelte  NavLabel.svelte  QrModal.svelte  Remotes.svelte  RemotesModal.svelte  Settings.svelte  Test.svelte
src/routes/setup/: +page.svelte  ContinueButton.svelte  Finish.svelte  RevertButton.svelte
src/routes/setup/firstRemote/: CodeInput.svelte  FirstRemote.svelte
src/routes/setup/localization/: Localization.svelte
src/routes/setup/location/: Location.svelte
src/routes/setup/suggestLaunchers/: LauncherItem.svelte  SuggestLaunchers.svelte
src/routes/setup/theme/: Theme.svelte
src/routes/setup/welcome/: Welcome.svelte
src/routes/ui/: Button.svelte  CardModal.svelte  CarouselSelector.svelte  Checkbox.svelte  DeviceName.svelte  KeyboardInput.svelte  MenuSection.svelte  Modal.svelte  NavLabel.svelte  NavText.svelte  Yapper.svelte
