[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [] }
reqwest = { version = "0.11.20", features = ["json"] }
log = "0.4.20"
env_logger = "0.10.0"
anyhow = "1.0.75"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
cpal = "0.15.2"
spectrum-analyzer = "1.4.0"
warp = { version = "0.3.5", features = ["tls"] }
jwt = "0.16.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
hmac = "0.12.1"
sha2 = "0.10.7"
tfc = "0.6.2"
win-gsmtc = "0.1.0"
directories = "5.0.1"
lazy_static = "1.4.0"
rcgen = "0.11.2"
serde_with = "3.3.0"
notify = "6.1.1"
async-trait = "0.1.73"
get_if_addrs = "0.5.3"
wmctrl = "0.1.8"

[target.'cfg(unix)'.dependencies]
mpris = "2.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
